<resources>
    <string name="app_name">Travall.3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main Menu</string>
    <string name="second_fragment_label">Food Near You</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login" />
    <string name="welcome_to_travall"> Welcome to TravAll</string> />
    <string name="create_login" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout" />
    <string name="action_mainMenu" />
    <string name="fromCountries_hint">Currency From</string>
    <string name="scanPrice_btn">Scan Price</string>
    <string name="amount_hint">amount</string>
    <string name="submit_btn">convert</string>
    <string name="result_tv">result</string>
    <string name="toCountries_hint">Currency to</string>
    <string name="element_text">element</string>
    <string name="select_image_for_text_recognition">image for text recognition</string>
    <string name="find_text_button">find text</string>
    <string name="select_image">select image</string>

    <!-- Strings used for fragments for itinerary -->
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

</resources>